cabal-version: 3.0
name: wireform-http
version: 0.1.0.0
synopsis: Unified HTTP client and server with version negotiation
description:
  Umbrella package that consolidates the @wireform-http1@ and
  @wireform-http2@ APIs behind a single client \/ server surface.
  .
  The HTTP type primitives (Method, Status, Version, Headers) are
  vendored from the @hermes@ library (originally
  @MercuryTechnologies\/hermes@) and rebranded into wireform; they
  live under @Network.HTTP.Types.*@ and are reused by both the
  HTTP\/1.x and HTTP\/2 conversion layers.
  .
  Version negotiation is driven by a 'VersionRange' constraint:
  .
  * 'http2Only' — strict HTTP\/2, the right setting for gRPC.
  * 'http1Only' — strict HTTP\/1.x.
  * 'preferHttp2' \/ 'preferHttp1' — accept either, with a preference.
  .
  A 'Network.HTTP.VersionRange.VersionOutOfRange' is raised if the
  peer forces us off-range.

homepage: https://github.com/iand675/wireform-
bug-reports: https://github.com/iand675/wireform-/issues
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
category: Network, Web
build-type: Simple
tested-with: GHC == 9.6.4, GHC == 9.8.4

source-repository head
  type:     git
  location: https://github.com/iand675/wireform-

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase
    BangPatterns

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Network.HTTP
    Network.HTTP.Client
    Network.HTTP.Server
    Network.HTTP.Message
    Network.HTTP.VersionRange
    Network.HTTP.Types.Body
    Network.HTTP.Types.Header
    Network.HTTP.Types.Method
    Network.HTTP.Types.Status
    Network.HTTP.Types.Version
  other-modules:
    Network.HTTP.Internal.Convert
  build-depends:
    base                 >= 4.16 && < 5,
    bytestring           >= 0.11 && < 0.13,
    case-insensitive     >= 1.2  && < 1.3,
    deepseq              >= 1.4  && < 1.6,
    hashable             >= 1.4  && < 1.6,
    network              >= 3.1  && < 3.3,
    wireform-http1,
    wireform-http2
