cabal-version: 3.0
name: wireform-http
version: 0.1.0.0
synopsis: Unified HTTP client and server with version negotiation
description:
  Umbrella package that consolidates the @wireform-http1@ and
  @wireform-http2@ APIs behind a single client \/ server surface.
  .
  The HTTP type primitives (Method, Status, Version, Headers) are
  vendored from the @hermes@ library (originally
  @MercuryTechnologies\/hermes@) and rebranded into wireform; they
  live under @Network.HTTP.Types.*@ and are reused by both the
  HTTP\/1.x and HTTP\/2 conversion layers.
  .
  Version negotiation is driven by a 'VersionRange' constraint:
  .
  * 'http2Only' — strict HTTP\/2, the right setting for gRPC.
  * 'http1Only' — strict HTTP\/1.x.
  * 'preferHttp2' \/ 'preferHttp1' — accept either, with a preference.
  .
  A 'Network.HTTP.VersionRange.VersionOutOfRange' is raised if the
  peer forces us off-range.

homepage: https://github.com/iand675/wireform-
bug-reports: https://github.com/iand675/wireform-/issues
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
category: Network, Web
build-type: Simple
tested-with: GHC == 9.6.4, GHC == 9.8.4

source-repository head
  type:     git
  location: https://github.com/iand675/wireform-

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase
    BangPatterns

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Network.HTTP
    -- High-level middleware-composable client.
    Network.HTTP.Client
    Network.HTTP.Client.Base
    Network.HTTP.Client.Body
    Network.HTTP.Client.BodyStream
    Network.HTTP.Client.Compression
    Network.HTTP.Client.Config
    Network.HTTP.Client.Cookies
    Network.HTTP.Client.Decoder
    Network.HTTP.Client.Media
    Network.HTTP.Client.Media.FormUrlEncoded
    Network.HTTP.Client.Media.JSON
    Network.HTTP.Client.Media.OctetStream
    Network.HTTP.Client.Media.PlainText
    Network.HTTP.Client.Middleware
    Network.HTTP.Client.Pool
    Network.HTTP.Client.Protocol
    Network.HTTP.Client.Request
    Network.HTTP.Client.Response
    Network.HTTP.Client.Send
    Network.HTTP.Client.Streaming
    Network.HTTP.Client.TLS
    Network.HTTP.Client.Test
    Network.HTTP.Client.Tracing
    Network.HTTP.Client.Transport
    Network.HTTP.Client.URI
    Network.HTTP.Client.VCR
    -- Low-level single-connection client.
    Network.HTTP.Connection
    -- Shared bits.
    Network.HTTP.Server
    Network.HTTP.TLS
    Network.HTTP.Message
    Network.HTTP.VersionRange
    Network.HTTP.Types.Body
    Network.HTTP.Types.Header
    Network.HTTP.Types.Method
    Network.HTTP.Types.Status
    Network.HTTP.Types.Version
  other-modules:
    Network.HTTP.Internal.Convert
  build-depends:
    base                 >= 4.16 && < 5,
    aeson                >= 2.1  && < 2.3,
    base64-bytestring    >= 1.2  && < 1.3,
    brotli               >= 0.0.0.3 && < 0.0.1,
    bytestring           >= 0.11 && < 0.13,
    case-insensitive     >= 1.2  && < 1.3,
    containers           >= 0.6  && < 0.9,
    deepseq              >= 1.4  && < 1.6,
    flatparse,
    hashable             >= 1.4  && < 1.6,
    hermes,
    hs-opentelemetry-api >= 0.2  && < 0.4,
    mason,
    network              >= 3.1  && < 3.3,
    semigroupoids        >= 5    && < 7,
    text-short           >= 0.1  && < 0.2,
    stm                  >= 2.5  && < 2.6,
    text                 >= 2.0  && < 2.2,
    time                 >= 1.11 && < 1.13,
    tls                  >= 2.0  && < 2.2,
    unliftio             >= 0.2  && < 0.3,
    unliftio-core        >= 0.2  && < 0.3,
    unordered-containers >= 0.2  && < 0.3,
    uri-templater        >= 1.0  && < 1.1,
    wireform-core,
    zlib                 >= 0.6  && < 0.8,
    wireform-http1,
    wireform-http2,
    wireform-yaml

test-suite wireform-http-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.Client
    Test.Http1Integration
    Test.Http2Integration
    Test.Negotiation
    Test.VersionTypes
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
    base,
    aeson,
    brotli,
    bytestring,
    case-insensitive,
    network,
    tasty            >= 1.4,
    tasty-hunit      >= 0.10,
    temporary        >= 1.3  && < 1.4,
    text,
    wireform-http,
    wireform-http1,
    wireform-http2,
    zlib
