cabal-version: 3.0
name: wireform-http
version: 0.1.0.0
synopsis: Unified HTTP client and server with version negotiation
description:
  Umbrella package that consolidates the @wireform-http1@ and
  @wireform-http2@ APIs behind a single client \/ server surface.
  .
  The HTTP type primitives (Method, Status, Version, Headers) are
  vendored from the @hermes@ library (originally
  @MercuryTechnologies\/hermes@) and rebranded into wireform; they
  live under @Network.HTTP.Types.*@ and are reused by both the
  HTTP\/1.x and HTTP\/2 conversion layers.
  .
  Version negotiation is driven by a 'VersionRange' constraint:
  .
  * 'http2Only' — strict HTTP\/2, the right setting for gRPC.
  * 'http1Only' — strict HTTP\/1.x.
  * 'preferHttp2' \/ 'preferHttp1' — accept either, with a preference.
  .
  A 'Network.HTTP.VersionRange.VersionOutOfRange' is raised if the
  peer forces us off-range.

homepage: https://github.com/iand675/wireform-
bug-reports: https://github.com/iand675/wireform-/issues
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
category: Network, Web
build-type: Simple
tested-with: GHC == 9.6.4, GHC == 9.8.4

source-repository head
  type:     git
  location: https://github.com/iand675/wireform-

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase
    BangPatterns

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Network.HTTP
    -- High-level middleware-composable client.
    Network.HTTP.Client
    Network.HTTP.Client.AuthChallenge
    Network.HTTP.Client.Base
    Network.HTTP.Client.Body
    Network.HTTP.Client.BodyStream
    Network.HTTP.Client.Compression
    Network.HTTP.Client.Conditional
    Network.HTTP.Client.Config
    Network.HTTP.Client.Cookies
    Network.HTTP.Client.Decoder
    Network.HTTP.Client.Expect
    Network.HTTP.Client.Media
    Network.HTTP.Client.Media.FormUrlEncoded
    Network.HTTP.Client.Media.JSON
    Network.HTTP.Client.Media.OctetStream
    Network.HTTP.Client.Media.PlainText
    Network.HTTP.Client.Middleware
    Network.HTTP.Client.Negotiation
    Network.HTTP.Client.Pool
    Network.HTTP.Client.Proxy
    Network.HTTP.Client.Proxy.Connect
    Network.HTTP.Client.Range
    Network.HTTP.Client.Redirect
    Network.HTTP.Client.Protocol
    Network.HTTP.Client.Request
    Network.HTTP.Client.Response
    Network.HTTP.Client.Send
    Network.HTTP.Client.SSE
    Network.HTTP.Client.Streaming
    Network.HTTP.Client.TLS
    Network.HTTP.Client.Test
    Network.HTTP.Client.Tracing
    Network.HTTP.Client.Transport
    Network.HTTP.Client.URI
    Network.HTTP.Client.VCR
    -- Low-level single-connection client.
    Network.HTTP.Connection
    -- Shared bits.
    Network.HTTP.Server
    Network.HTTP.TLS
    Network.HTTP.FramingRules
    Network.HTTP.HttpDate
    Network.HTTP.Message
    Network.HTTP.PercentEncoding
    Network.HTTP.Upgrade
    Network.HTTP.VersionRange
    Network.HTTP.Types.Body
    Network.HTTP.Types.Header
    Network.HTTP.Types.Method
    Network.HTTP.Types.Status
    Network.HTTP.Types.Version
  other-modules:
    Network.HTTP.Internal.Convert
    Network.HTTP.Internal.Validation
  build-depends:
    base                 >= 4.16 && < 5,
    aeson                >= 2.1  && < 2.3,
    base64-bytestring    >= 1.2  && < 1.3,
    brotli               >= 0.0.0.3 && < 0.0.1,
    bytestring           >= 0.11 && < 0.13,
    case-insensitive     >= 1.2  && < 1.3,
    containers           >= 0.6  && < 0.9,
    deepseq              >= 1.4  && < 1.6,
    flatparse,
    hashable             >= 1.4  && < 1.6,
    hermes,
    hs-opentelemetry-api >= 0.2  && < 0.4,
    idn                  >= 0.1  && < 0.2,
    network              >= 3.1  && < 3.3,
    semigroupoids        >= 5    && < 7,
    text-short           >= 0.1  && < 0.2,
    stm                  >= 2.5  && < 2.6,
    text                 >= 2.0  && < 2.2,
    time                 >= 1.11 && < 1.13,
    unliftio             >= 0.2  && < 0.3,
    unliftio-core        >= 0.2  && < 0.3,
    unordered-containers >= 0.2  && < 0.3,
    uri-templater        >= 1.0  && < 1.1,
    wireform-core,
    wireform-network,
    zlib                 >= 0.6  && < 0.8,
    wireform-http1,
    wireform-http2,
    wireform-yaml

benchmark wireform-http-bench
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N2"
  build-depends:
    base,
    bytestring,
    criterion >= 1.5,
    network,
    wireform-http

test-suite wireform-http-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.AuthChallenge
    Test.Client
    Test.ConcurrencyStress
    Test.Conditional
    Test.Http1Integration
    Test.Http1EdgeCases
    Test.Http2Integration
    Test.Http2EdgeCases
    Test.IDN
    Test.Negotiation
    Test.SSE
    Test.SSEIntegration
    Test.UrlDecode
    Test.VersionTypes
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
    base,
    aeson,
    brotli,
    bytestring,
    case-insensitive,
    flatparse,
    hedgehog         >= 1.0  && < 1.8,
    hermes,
    network,
    tasty            >= 1.4,
    tasty-hedgehog   >= 1.0  && < 1.8,
    tasty-hunit      >= 0.10,
    temporary        >= 1.3  && < 1.4,
    text,
    wireform-http,
    wireform-http1,
    wireform-http2,
    zlib
